Fixes css alignment bugs in import modal (#1515)
* fixes alignment issus on import modal

* adds changelog

--- a/ui/src/js/pages/dashboard/shared/import/ImportModule.scss
+++ b/ui/src/js/pages/dashboard/shared/import/ImportModule.scss
@@ -266,18 +266,18 @@ input.Import__input--paste{
   color: $primaryText;
   word-break: break-word;
   line-height: 20px;
-  @include flex(space-around, column);
-  height: 100%;
+  @include flex(space-between, column);
+  height: calc(100% - 9em);
   width: 80%;
   align-self: center;
 }
 
-.ImportDropzone{
+.ImportDropzone {
   align-self: center;
   min-height: 200px !important;
   width: 100%;
   text-align: center;
-  margin-top: 0;
+  margin-top: 1em !important;
   min-height: 140px;
   @include flex(center, column);
   hr {
